samples/_failures_safe/1761463523_8d6aa2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d3ba837.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9d3ba837.c:191:9: error: expected expression at end of input
  191 |         for (int v = 0; v < graph->vertices;
      |         ^~~
./samples/SAFE/__tmp_9d3ba837.c:191:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d3ba837.c:191:9: error: expected declaration or statement at end of input
